tests/invalid/invalid_uint16_inst.err_exp
invalid_uint16_inst.m:015: In clause for `main(di, uo)':
invalid_uint16_inst.m:015:   in argument 1 of call to function
invalid_uint16_inst.m:015:   `invalid_uint16_inst.foo'/1:
invalid_uint16_inst.m:015:   mode error: variable `N' has instantiatedness
invalid_uint16_inst.m:015:   `unique(7u16)',
invalid_uint16_inst.m:015:   expected instantiatedness was
invalid_uint16_inst.m:015:   `bound(2u16 ; 4u16 ; 6u16)'.
For more information, recompile with `-E'.
